styles/scss/panel/_panel.scss
/* ... */
// Tabs
.panel-tab {
    align-items: center;
    background: transparent;
    display: flex;
    flex: 1;
    list-style: none;
    margin: 20px 0;
    gap: 24px;
    overflow: hidden;
    padding: 0 30px;

    .tab-item {
        min-width: 60px;
        margin-top: 0;

        a {
            border-bottom: 2px solid transparent;
            display: block;
            padding: 0 4px;
            text-decoration: none;
            font-weight: 400;
            font-size: 14px;
            line-height: 22px;
            color: #121212;
            opacity: 0.5;
            text-align: center;

            &:focus,
            &:hover {
                border-bottom-color: #121212;
                opacity: 1;
                font-weight: 700;
                transition: all .1s linear 0s;
            }
        }

        &.active a,
        a.active {
            border-bottom-color: #121212;
            opacity: 1;
            font-weight: 700;
        }
    }
}

.feeds-container-box {
    padding: 0 30px;

    .feeds-title {
        font-weight: 900;
        font-size: 14px;
        line-height: 1.43;
        text-transform: uppercase;
    }

    .feeds-container {
        max-width: 100%;
        max-height: 60vh;
        margin-top: 20px;
        overflow-y: auto;
        overflow-x: hidden;
        display: flex;
        flex-direction: column;
        gap: 20px;
        .feed-timestamp{
            width: fit-content;
            margin-left: 34px;
            opacity: .5;
        }

        .feed-item-box {
            display: flex;
            width: 100%;
            align-items: flex-start;
            gap: 10px;

            .feed-type-badge {
                width: 24px;
                height: 24px;
                background: rgba(18, 18, 18, 0.08);
                box-shadow: 0px 4px 24px rgba(0, 0, 0, 0.05);
                border-radius: 8px;
            }

            .feed-item {
                display: flex;
                flex-direction: column;
                gap: 10px;
                max-width: 90%;

                .feed-item-header {
                    width: 100%;
                    display: flex;
                    align-items: center;
                    gap: 10px;

                    .feed-type-intro {
                        display: flex;
                        align-items: center;
                        font-weight: 400;
                        font-size: 14px;
                        line-height: 22px;

                        .strong {
                            font-weight: 900;
                            margin: 0 4px;
                        }
                    }
                }

                .feed-item-main {
                    display: flex;
                    align-items: center;
                    gap: 10px;

                    .feed-nft-img {
                        width: 40px;
                        height: 40px;
                        box-shadow: 0px 4px 24px rgba(0, 0, 0, 0.15);
                        border-radius: 12px;
                    }

                    .feed-swap-img {
                        width: 24px;
                        box-shadow: 0px 4px 24px rgba(0, 0, 0, 0.15);
                        border-radius: 12px;
                        background: transparent;
                    }

                    .feed-nft-info {
                        display: flex;
                        flex-direction: column;

                        .nft-title {
                            font-weight: 700;
                            font-size: 14px;
                            line-height: 22px;
                            display: -webkit-box;
                            -webkit-box-orient: vertical;
                            -webkit-line-clamp: 1;
                            overflow: hidden;
                        }

                        .nft-subtitle {
                            font-weight: 400;
                            display: -webkit-box;
                            -webkit-box-orient: vertical;
                            -webkit-line-clamp: 2;
                            overflow: hidden;
                        }

                        .nft-collection-title {
                            font-weight: 400;
                            font-size: 12px;
                            line-height: 20px;
                            color: #121212;
                            opacity: 0.5;
                        }
                    }
                }
            }


        }
    }
}

